# MCPWeChatOfficialAccounts

./: .gitignore  CONFIGURATION_GUIDE.md  README.md  config.toml  config.toml.example  pyproject.toml  weixin_spider.py  weixin_spider_simple.py  代码优化分析报告.md
src/mcp_weixin_spider/: __init__.py  __main__.py  client.py  common.py  config.py  exceptions.py  main.py  server.py  spider.py
tests/: test_config.py  test_config_integration.py  test_server.py
