[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-weixin-spider"
version = "0.1.0"
description = "MCP微信公众号爬虫 - 基于FastMCP框架构建的微信公众号文章爬虫系统"
authors = [
    { name = "Project Maintainer", email = "maintainer@example.com" }
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "selenium>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "webdriver-manager>=4.0.0",
    "Pillow>=10.0.0",
    "lxml>=4.9.0",
    "aiofiles>=23.0.0",
    "coloredlogs>=15.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "toml>=0.10.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
mcp-weixin-server = "mcp_weixin_spider.__main__:main"
mcp-weixin-client = "mcp_weixin_spider.client:run_client"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(\.
    |build
    |dist
    |venv
    |\.git
    |\.tox
    |\.github
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = false
ignore_missing_imports = true
follow_imports = "skip"

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", "venv", "build", "dist"]
ignore = ["E203", "W503"]
