[build-system]
requires = ["setuptools>=61.0.0", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-weixin-spider"
version = "0.1.0"
description = "MCP微信公众号爬虫 - 基于FastMCP框架构建的微信公众号文章爬虫系统"
authors = [
    { name = "Project Maintainer", email = "maintainer@example.com" }
]
readme = "README.md"
license = {file = "LICENSE"}
urls = { "Homepage" = "https://github.com/example/mcp-weixin-spider", "Documentation" = "https://github.com/example/mcp-weixin-spider/wiki", "Source" = "https://github.com/example/mcp-weixin-spider", "Issues" = "https://github.com/example/mcp-weixin-spider/issues" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: System :: Monitoring",
    "Environment :: Console",
    "Framework :: AsyncIO"
]
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "selenium",
    "beautifulsoup4",
    "requests",
    "webdriver-manager",
    "Pillow",
    "lxml",
    "aiofiles",
    "coloredlogs",
    "pandas",
    "numpy",
    "toml"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy"
]

[project.scripts]
mcp-weixin-spider = "mcp_weixin_spider.__main__:main"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(\.
    |build
    |dist
    |venv
    |\.git
    |\.tox
    |\.github
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
ignore_missing_imports = false
follow_imports = "normal"
strict_optional = true
warn_unused_variables = true
warn_unused_parameters = true

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", "venv", "build", "dist"]
ignore = ["E203", "W503"]
